# usdtweak

./: .gitignore  CMakeLists.txt  meson.build
app/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  Constants.h  Dockspace.cpp  Dockspace.h  Editor.cpp  Editor.h  Gui.cpp  Gui.h  Selection.cpp  Selection.h  main.cpp  meson.build  window.cpp  window.h
src/app/: CMakeLists.txt  main.cpp
src/commands/: Commands.cpp  EditorCommands.cpp  Shortcuts.h
src/resources/: GlslCode.h  ResourcesLoader.cpp
src/resources/glsl/: ManipulatorFrag.cpp  ManipulatorVert.cpp
src/stage/: AovUtil.cpp  AovUtil.h  CMakeLists.txt  StageLoader.cpp  StageLoader.h
src/stage/commands/: EditorCommands.cpp  SdfLayerInstructions.cpp  Shortcuts.h
src/viewport/: CMakeLists.txt  CameraManipulator.cpp  Grid.cpp  Grid.h  GridFrag.cpp  GridVert.cpp  HydraRenderer.cpp  HydraRenderer.h  MouseHoverManipulator.cpp  PositionManipulator.cpp  RotationManipulator.cpp  ScaleManipulator.cpp  SelectionManipulator.cpp  Viewport.cpp  Viewport.h
src/viewport/manipulators/: CameraManipulator.cpp  CameraManipulator.h  CameraRig.cpp  GeometricFunctions.h  GlslCode.h  Manipulator.h  MouseHoverManipulator.cpp  MouseHoverManipulator.h  PositionManipulator.cpp  PositionManipulator.h  RotationManipulator.cpp  RotationManipulator.h  ScaleManipulator.cpp  ScaleManipulator.h  SelectionManipulator.cpp  SelectionManipulator.h
src/widgets/: CMakeLists.txt  CompositionEditor.cpp  Constants.h  ContentBrowser.cpp  ContentBrowser.h  Debug.cpp  Dockspace.cpp  FileBrowser.cpp  ImGuiHelpers.h  LayerEditor.cpp  LayerHierarchyEditor.cpp  ModalDialogs.cpp  PrimSpecEditor.cpp  PrimSpecEditor.h  PropertyEditor.cpp  RendererSettings.cpp  RendererSettings.h  StageOutliner.cpp  StageOutliner.h  TextEditor.cpp  TextFilter.cpp  TextFilter.h  Timeline.cpp  UsdPrimEditor.cpp  ValueEditor.cpp  VariantEditor.cpp
subprojects/: imgui.wrap
subprojects/packagefiles/usd/pxr/: meson.build
subprojects/packagefiles/usd/pxr/usd/: meson.build
subprojects/packagefiles/usd/pxr/usd/usdUtils/: meson.build
subprojects/packagefiles/usd/pxr/usdImaging/: meson.build
subprojects/packagefiles/usd/pxr/usdImaging/usdAppUtils/: meson.build
subprojects/packagefiles/usd/pxr/usdImaging/usdImagingGL/: meson.build
