subdirs(3rdparty)

add_library(
  usdtweak_lib
  Constants.h
  Editor.cpp
  Editor.h
  Gui.h
  ProxyHelpers.h
  Dockspace.cpp
  commands/Commands.cpp
  commands/Commands.h
  commands/Shortcuts.h
  commands/SdfCommandGroup.cpp
  commands/SdfCommandGroup.h
  commands/SdfLayerInstructions.cpp
  commands/SdfLayerInstructions.h
  commands/SdfUndoRecorder.cpp
  commands/SdfUndoRecorder.h
  commands/UndoLayerStateDelegate.cpp
  commands/UndoLayerStateDelegate.h
  viewport/GridVert.cpp
  viewport/GridFrag.cpp
  viewport/Selection.cpp
  viewport/Selection.h
  viewport/Grid.cpp
  viewport/Grid.h
  viewport/manipulators/CameraRig.cpp
  viewport/manipulators/CameraRig.h
  viewport/manipulators/ManipulatorVert.cpp
  viewport/manipulators/ManipulatorFrag.cpp
  viewport/manipulators/CameraManipulator.cpp
  viewport/manipulators/CameraManipulator.h
  viewport/manipulators/Manipulator.cpp
  viewport/manipulators/Manipulator.h
  viewport/manipulators/MouseHoverManipulator.cpp
  viewport/manipulators/MouseHoverManipulator.h
  viewport/manipulators/PositionManipulator.cpp
  viewport/manipulators/PositionManipulator.h
  viewport/manipulators/RotationManipulator.cpp
  viewport/manipulators/RotationManipulator.h
  viewport/manipulators/ScaleManipulator.cpp
  viewport/manipulators/ScaleManipulator.h
  viewport/manipulators/SelectionManipulator.cpp
  viewport/manipulators/SelectionManipulator.h
  viewport/Viewport.cpp
  viewport/Viewport.h
  widgets/TextEditor.cpp
  widgets/TextEditor.h
  widgets/CompositionEditor.cpp
  widgets/CompositionEditor.h
  widgets/FileBrowser.cpp
  widgets/FileBrowser.h
  widgets/LayerEditor.cpp
  widgets/LayerEditor.h
  widgets/LayerHierarchyEditor.cpp
  widgets/LayerHierarchyEditor.h
  widgets/ModalDialogs.cpp
  widgets/ModalDialogs.h
  widgets/PrimSpecEditor.cpp
  widgets/PrimSpecEditor.h
  widgets/PropertyEditor.cpp
  widgets/PropertyEditor.h
  widgets/RendererSettings.cpp
  widgets/RendererSettings.h
  widgets/StageOutliner.cpp
  widgets/StageOutliner.h
  widgets/ContentBrowser.cpp
  widgets/ContentBrowser.h
  widgets/TextFilter.cpp
  widgets/TextFilter.h
  widgets/Timeline.cpp
  widgets/Timeline.h
  widgets/ValueEditor.cpp
  widgets/ValueEditor.h
  widgets/VariantEditor.cpp
  widgets/VariantEditor.h)
target_include_directories(usdtweak_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(usdtweak_lib PUBLIC imgui usd filesystem fontawesome
                                          iconfontcppheaders)

# Remove warnings coming from usd and enable default multithreaded compilation
# on windows
target_compile_options(
  usdtweak_lib
  PRIVATE $<$<CXX_COMPILER_ID:MSVC>:/MP
          /wd4244
          /wd4305
          /wd4996
          /wd4506
          /wd4275>
          $<$<CXX_COMPILER_ID:GNU>:-Wno-deprecated>)
